Fix: dark mode always

--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -19,4 +19,5 @@ html, body {
   font-family: 'Montserrat', sans-serif !important;
   height: auto !important;
   overflow: auto !important;
+  filter: invert(1) hue-rotate(180deg);
 }
